# GTL_autonomiousRobotic

./: .gitignore  CMakeLists.txt  update_script.sh
ar_loc/: CMakeLists.txt  package.xml  setup.py
ar_loc/launch/: test_ar.launch
ar_loc/nodes/: rover_loc.py
ar_loc/src/ar_loc/: rover_kf.py  rover_odo.py  rover_pf.py
ar_loc/src/ar_loc_base/: rover_kinematics.py  rover_odo.py  rover_pf.py
ar_mapping/: CMakeLists.txt  package.xml  setup.py
ar_mapping/launch/: test_ar.launch
ar_mapping/nodes/: rover_mapping.py
ar_mapping/src/ar_mapping/: mapping_kf.py
ar_slam/: package.xml
ar_slam/launch/: 2D_costmap.yaml  bubble_gmapping_slam.launch  rover_gmapping_slam.launch  test_ar.launch  test_ar_basic.launch  turtle_slam.launch  turtle_slam_angle.launch  turtle_slam_angle_costmap.launch
ar_slam/nodes/: PathExporter.py  rover_mapping.py  rover_mapping_basic.py  turtle_slam.py  turtle_slam_angle.py
ar_slam/src/ar_slam/: mapping_kf.py  mapping_kf_basic.py
collision_avoidance/: CMakeLists.txt  package.xml
collision_avoidance/launch/: ca.launch
collision_avoidance/src/: collision_avoidance.cpp
face_detect/: CMakeLists.txt  package.xml
face_detect/launch/: one_face_detect_roi.launch
face_detect/msg/: faces.msg
face_detect/nodes/: onefacedetectroi.py  rosfacedetect.py
floor_nav/: CMakeLists.txt  package.xml
floor_nav/cfg/: TaskConstant.cfg  TaskGoToBase.cfg  TaskGoToDock.cfg  TaskGoToPose.cfg  TaskStareAtFace.cfg  TaskUndock.cfg  TaskWaitForFace.cfg
floor_nav/include/floor_nav/: SimTasksEnv.h
floor_nav/launch/: launch_rover.launch  launch_turtlebot.launch
floor_nav/missions/: map_weeefee.py  peoplefinder.py  test_goto.py  test_gotobase.py  test_gotodock.py  test_gotopose.py  test_wander.py
floor_nav/src/: SimTasksEnv.cpp
floor_nav/tasks/: TaskConstant.cpp  TaskConstant.h  TaskGoToBase.cpp  TaskGoToBase.h  TaskGoToDock.cpp  TaskGoToDock.h  TaskGoToPose.cpp  TaskGoToPose.h  TaskStareAtFace.cpp  TaskStareAtFace.h  TaskUndock.cpp  TaskUndock.h  TaskWaitForFace.cpp  TaskWaitForFace.h
hw1_joy_ns/: CMakeLists.txt  package.xml
hw1_joy_ns/launch/: robk_joy.launch  turtle_joy.launch  turtlebot_joy.launch
hw1_joy_ns/src/: joyrobk.cpp  joyturtle.cpp
launcher/launch/: turtlebot_gmapping.launch  turtlebot_goto_pose.launch  turtlebot_planner_avoidance.launch  turtlebot_slam_costmap.launch
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/launch/: ca_teleop.launch  mapping.launch
obstacle_avoidance/src/: obstacle_avoidance.cpp
occgrid_planner/: CMakeLists.txt  package.xml
occgrid_planner/launch/: planner.launch  planner_avoidance.launch  signal_scanner.launch
occgrid_planner/src/: AngleMovement.cpp  AngleMovement.h  MovementGenerator.cpp  MovementGenerator.h  SignalGridBuilder.cpp  SignalGridBuilder.h  TargetMapBuilder.cpp  TargetMapBuilder.h  occgrid_goto.cpp  occgrid_goto_pose.cpp  occgrid_planner.cpp  path_follower.cpp  path_optimizer.cpp
robot_control/: CMakeLists.txt  package.xml
robot_control/docs/: FollowLineConfig-usage.dox  GotoXYConfig-usage.dox  GotoXYThetaConfig-usage.dox
robot_control/nodes/: bubble_odom.py  follow_line.py  goto_xy.py  goto_xytheta.py
ros_task_manager/src/task_manager_turtlesim/: CMakeLists.txt  package.xml
rover_driver/: CMakeLists.txt  package.xml  setup.py
rover_driver/launch/: rover.launch  rover_odom.launch
rover_driver/nodes/: rover_command.py  rover_keyboard.py  rover_odom.py  rover_teleop.py
rover_driver/src/rover_driver/: rover_kinematics.py
tb_slam/: CMakeLists.txt  package.xml
tb_slam/launch/: costmap.launch
tb_slam/nodes/: turtle_slam.py  turtle_slam_singleids.py  turtle_slam_singleids_fixed.py
vrep_gmapping/: CMakeLists.txt  package.xml
vrep_gmapping/launch/: gmapping_odom_bubblerob.launch
vrep_ros_teleop/: package.xml
wifiPublisher/: CMakeLists.txt  mainpage.dox  manifest.xml
wifiPublisher/launch/: wifi_mapper.launch
wifiPublisher/node/: wifi_publisher.py
wifiPublisher/src/: WifiSignalGridBuilder.cpp  WifiSignalGridBuilder.h
wifi_publisher/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
wifi_publisher/launch/: wifi_mapper.launch
wifi_publisher/msg/: wifi.msg
wifi_publisher/node/: wifi_publisher_node.py
wifi_publisher/src/: WifiSignalGridBuilder.cpp  WifiSignalGridBuilder.h
(+9 files in other folders)
